package it.stefano.machinesimulator.mqtt;

public interface AbstractMiddlewareMessage
{
}
